--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,8 +13,16 @@
  
  
  
- 
-  	23.08.2014
+	26.11.2014
+	---------------------------------------------------------------
+	CHANGES:
+	- Minor design changes
+	- Uses Higcharts CDN
+	- Uses Bootstrap CDN
+	- Uses JQuery CDN
+
+
+	23.08.2014
 	---------------------------------------------------------------
 	CHANGES:
 	- Combined humidity charts
