--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,6 +13,15 @@
  
  
  
+	22.05.2015
+	---------------------------------------------------------------
+	CHANGES:
+	- Uses Bootstrap CDN 3.3.4
+	- Uses Bootstrapselect 1.7.1
+	- Uses JQuery 2.11.4
+	- Uses JQueryUI 1.11.3
+	
+	
 	26.11.2014
 	---------------------------------------------------------------
 	CHANGES:
